# project_machine_learning_regression_cpp

./: .gitignore  LICENSE  README.md
lab_pytorch/.ipynb_checkpoints/: Lab-checkpoint.ipynb
lab_pytorch/Lab Python/: Lab.py  Lab.pyproj  Lab.sln
lab_pytorch/PytorchCpp/: CMakeLists.txt  PytorchCpp.cpp  PytorchCpp.h
machine_learning_regression_cpp/: LinearMetrics.cpp  LinearMetrics.h  LinearRegression.cpp  LinearRegression.h  LoadCSV.cpp  LoadCSV.h  machine_learning_regression_cpp.sln  machine_learning_regression_cpp.vcxproj  machine_learning_regression_cpp.vcxproj.filters  main.cpp
machine_learning_regression_cpp/data/: insurance.csv
machine_learning_regression_cpp/machine_.0cf1bbf3/x64/Debug/: loadcsv.obj.enc  machine_learning_regression_cpp.exe.recipe  machine_learning_regression_cpp.ilk  main.obj.enc  vc143.idb
machine_learning_regression_cpp/machine_.0cf1bbf3/x64/Debug/machine_.0cf1bbf3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  machine_learning_regression_cpp.lastbuildstate
